--- a/frontend/src/app/modules/features/employer/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/modal/job-preview/job-preview.component.html
@@ -65,7 +65,7 @@
         <div class="col-lg-6 info">
           <ul class="list-group">
             <li class="list-group-item text-uppercase lg-mh-40">
-              <p class="m-0 w-100 float-left" *ngFor="let item of jobInfo?.skills">
+              <p class="m-0 w-100 float-left" *ngFor="let item of utilsHelperService.differenceByPropValArray(jobInfo?.skills, jobInfo?.hands_on_experience, 'skill_id')">
                 <span class="text-wrap-custom float-left">{{item ? sharedService.onFindSkillsFromSingleID(item)?.tag: '--'}}</span>
               </p>
              </li>
