--- a/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
+++ b/frontend/src/app/modules/features/user/profile/create-candidate/create-candidate-footer/create-candidate-footer.component.html
@@ -9,21 +9,19 @@
 
   <div class="col-lg-2 col-md-6">
     <div class="form-group">
-      <button [disabled]="!createCandidateForm.valid" (click)="onNext()" *ngIf="currentTabInfo.tabNumber != 4" type="button"
+      <button [disabled]="(!createCandidateForm.valid && !userInfo?.profile_completed)" (click)="onNext()" *ngIf="currentTabInfo.tabNumber != 4" type="button"
         class="btn btn-theme-blue btn-block btn-lg btnNext" style="padding: 10px;">
-        {{userInfo?.id ? 'Update & Next' : ("common.next" | translate) }}
+        {{userInfo?.profile_completed ? 'Update & Next' : ("common.next" | translate) }}
       </button>
-
-
-      <button  [disabled]="!createCandidateForm.valid" *ngIf="currentTabInfo.tabNumber == 4" type="button" class="btn btn-theme-green btn-block btn-lg btnSubmit"
+      <button  [disabled]="(!createCandidateForm.valid && !userInfo?.profile_completed)" *ngIf="currentTabInfo.tabNumber == 4" type="button" class="btn btn-theme-green btn-block btn-lg btnSubmit"
         (click)="onToggleRegisterReview(true)">
         {{"common.submit" | translate }}
       </button>
     </div>
   </div>
-  <div class="col-lg-2 col-md-6" *ngIf="currentTabInfo.tabNumber != 4">
+  <div class="col-lg-2 col-md-6" *ngIf="((currentTabInfo.tabNumber != 4) && userInfo?.profile_completed)">
     <div class="form-group">
-      <button [disabled]="!createCandidateForm.valid" (click)="onToggleRegisterReview(true)" *ngIf="userInfo?.id" type="button"
+      <button [disabled]="(!createCandidateForm.valid && !userInfo?.profile_completed)" (click)="onToggleRegisterReview(true)" type="button"
       class="btn btn-theme-blue btn-block btn-lg btnNext">
       Update
       <!-- {{"common.next" | translate }} -->
