--- a/frontend/src/app/modules/features/user/user-resume/user-resume.component.html
+++ b/frontend/src/app/modules/features/user/user-resume/user-resume.component.html
@@ -3,7 +3,7 @@
     <div class="row mt-3">
       <div class="col-lg-12">
         <div class="custom-control custom-checkbox mr-sm-2">
-          <input type="checkbox" class="custom-control-input" id="chooseApplying">
+          <input [checked]="onCheck(userProfileInfo?.doc_resume, 'default')" (click)="onChooseDefaultResume({}, $event.target.checked, true)" type="checkbox" class="custom-control-input" id="chooseApplying">
           <label class="custom-control-label h6" for="chooseApplying">{{"dashboard.iWillChooseWhileApplying" | translate}}</label>
           </div>
       </div>
@@ -17,11 +17,11 @@
         <a (click)="onToggleResumeForm(true, (userProfileInfo?.meta?.doc_resume?.path + '/' + userProfileInfo?.meta?.doc_resume?.folder + '/' + item?.file))" href="#" data-toggle="modal" data-target="#resumeModal">
           <!-- <ngx-doc-viewer [url]="item?.meta?.doc_resume?.path + '/' + item?.meta?.doc_resume?.folder + '/' + item?.file" viewer="google" style="width:100%;height:50vh;"></ngx-doc-viewer> -->
           <i class="far fa-file-alt h1"></i>
-          <p class="card-title mb-2">SAP ABAP Developer</p>
+          <p class="card-title mb-2">{{item?.title}}</p>
         </a>
 
         <div class="form-group form-check  mb-0">
-          <input [checked]="(item.default == 1 || item.default == '1')" type="checkbox" class="form-check-input" id="resumeCheck_{{i}}">
+          <input (click)="onChooseDefaultResume(item, $event.target.checked)" [checked]="(item.default == 1 || item.default == '1')" type="checkbox" class="form-check-input" id="resumeCheck_{{i}}">
           <label class="form-check-label" for="resumeCheck_{{i}}">{{"common.default" | translate}} </label>
         </div>
       </div>
@@ -44,22 +44,26 @@
 </app-resume-modal>
 
 <ng-template #resumeTitleModal let-modal>
-  <div class="modal-header">
-    <h5 class="modal-title">Add Resume Tilte</h5>
-    <button type="button" (click)="mbRef?.close()" class="close" data-dismiss="modal" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
-    </div>
-    <div class="modal-body">
-    <div class=" form-group">
-      <label class="h5">Resume Title</label>
-      <input [(ngModel)]="resumeTitle" type="text" class="form-control" placeholder="Enter Resume Title">
-    </div>
-    </div>
-    <div class="modal-footer">
-    <button type="button" (click)="mbRef?.close()" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-    <button type="button" (click)="onSaveResume()" class="btn btn-theme-blue " data-dismiss="modal">Save</button>
-    </div>
+  <form method="post" (ngSubmit)="onSaveResume()" #resumeNgForm="ngForm" [formGroup]="resumeForm">
+    <div class="modal-header">
+      <h5 class="modal-title">Add Resume Tilte</h5>
+      <button type="button" (click)="mbRef?.close()" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      </div>
+      <div class="modal-body">
+      <div class=" form-group">
+        <label class="h5">Resume Title</label>
+        <input formControlName="title" type="text" class="form-control" placeholder="Enter Resume Title">
+        <app-control-messages [control]="f['title']"></app-control-messages>
+      </div>
+      </div>
+      <div class="modal-footer">
+      <button type="button" (click)="mbRef?.close()" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+      <button [disabled]="!resumeForm.valid" type="button" (click)="onSaveResume()" class="btn btn-theme-blue " data-dismiss="modal">Save</button>
+      </div>
+  </form>
+
 </ng-template>
 
 
