--- a/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
+++ b/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
@@ -15,88 +15,30 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-              <td><a href="candidate-job-view.html">SAP ABAP Lead Consultant</a></td>
-              <td>Wipro Limited</td>
-              <td>Austin, TX, USA</td>
-              <td>Sep 22, 2020</td>
-              <td class="text-success">Open </td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">SAP BA / Project Manager</a></td>
-              <td>SAP Cincinnati</td>
-              <td>OH, USA</td>
-              <td>Sep 22, 2020</td>
-              <td class="text-success">Open </td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">SAP IBP - Integrated Business Planning</a></td>
-              <td>Techcom Solutions</td>
-              <td>Chennai, India</td>
-              <td>Sep 22, 2020</td>
-              <td class="text-success">Open </td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">SAP Security Consultant</a></td>
-              <td>Infosys Technologies Ltd</td>
-              <td>New York, NY 10007</td>
-              <td>Sep 22, 2020</td>
-              <td class="text-danger">Closed </td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">SAP Hybris Consultant - C4C</a></td>
-              <td>Next Ventures</td>
-              <td>Chennai, Tamil Nadu</td>
-              <td>Sep 22, 2020</td>
-              <td class="text-danger">Closed </td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="candidate-job-view.html">SAP ABAP Lead Consultant</a></td>
-              <td>Wipro Limited</td>
-              <td>Austin, TX, USA</td>
-              <td>Sep 15, 2020</td>
-              <td class="text-success">Open </td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">SAP BA / Project Manager</a></td>
-              <td>SAP Cincinnati</td>
-              <td>OH, USA</td>
-              <td>Sep 15, 2020</td>
-              <td class="text-success">Open </td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">SAP IBP - Integrated Business Planning</a></td>
-              <td>Techcom Solutions</td>
-              <td>Chennai, India</td>
-              <td>Sep 15, 2020</td>
-              <td class="text-danger">Closed </td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">SAP Security Consultant</a></td>
-              <td>Infosys Technologies Ltd</td>
-              <td>New York, NY 10007</td>
-              <td>Sep 15, 2020</td>
-              <td class="text-danger">Closed </td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
-            <tr>
-              <td><a href="#">SAP Hybris Consultant - C4C</a></td>
-              <td>Next Ventures</td>
-              <td>Chennai, Tamil Nadu</td>
-              <td>Sep 15, 2020</td>
-              <td class="text-danger">Closed </td>
-              <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
-            </tr>
+              <ng-container *ngIf="appliedJobs?.length; else elseTemplate">
+                <tr *ngFor="let item of appliedJobs">
+                  <td><a class="text-capitalize" href="candidate-job-view.html">{{item?.job_posting?.title}}</a></td>
+                  <td>Wipro Limited</td>
+                  <td>Austin, TX, USA</td>
+                  <td>{{item?.job_posting?.created_at ? (item?.job_posting?.created_at | date: "MMM dd, y") : '-'}}</td>
+                  <td [ngClass]="{'text-success': item?.job_posting?.status == 1, 'text-danger': item?.job_posting?.status == 0}">{{item?.job_posting?.status == 1 ? 'Open' : 'Closed'}} </td>
+                  <td class="text-center"><a href="#" class="text-danger"><i class="fas fa-trash-alt"></i></a></td>
+                </tr>
+              </ng-container>
+              <ng-template #elseTemplate>
+                <tr>
+                  <td colspan="6">No Record Found</td>
+                </tr>
+              </ng-template>
+
+
             </tbody>
           </table>
+        </div>
+        <div class="d-flex justify-content-center" *ngIf="appliedJobMeta?.count > 0 && appliedJobMeta?.total > 25">
+          <button (click)="onLoadMoreJob()" class="btn btn-theme-blue" type="button">
+            Load More
+          </button>
         </div>
       </div>
     </div>
